--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -35,8 +35,11 @@
                     <label for="" class="form-label">Confirm Password</label>
                     <input type="password" name="" id="" class="form-control">
                 </div>
-                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                    <a href="" class="btn btn-success">Register</a>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <button class="btn btn-success">Register</button>
+                </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                    <a href="/" class="btn btn-primary">User Login</a>
                 </div>
             
             </div>
