--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
               Category
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Chinese</a></li>
+              <li><a class="dropdown-item" href="/chinese">Chinese</a></li>
               <li><a class="dropdown-item" href="#">South Indian</a></li>
             </ul>
           </li>
