--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,13 +12,16 @@
           <li class="nav-item">
             <a class="nav-link" href="/register">Register</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Log Out</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Category
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Chinese</a></li>
-              <li><a class="dropdown-item" href="#">South Indian</a></li>
+              <li><a class="dropdown-item" href="/chinese">Chinese</a></li>
+              <li><a class="dropdown-item" href="/south">South Indian</a></li>
             </ul>
           </li>
         </ul>
